[gd_scene load_steps=2 format=3 uid="uid://d3qytmx7q1jnp"]

[ext_resource type="Script" path="res://scenes/ui/player_list_ui.gd" id="1_player_list"]

[node name="PlayerListUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_player_list")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -200.0
offset_right = 240.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleBar" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Players"
theme_override_font_sizes/font_size = 22

[node name="CloseButton" type="Button" parent="Panel/VBox/TitleBar"]
layout_mode = 2
text = "âœ•"
flat = true

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="SquadInfo" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Squad: Solo"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerContainer" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="LeaveSquadButton" type="Button" parent="Panel/VBox"]
visible = false
layout_mode = 2
text = "Leave Squad"



